feat(checkout): complete Stripe test checkout flow